The max-width style removed as it fixes some themes (like PrimePress) but break the Google Map scale.
git-svn-id: https://plugins.svn.wordpress.org/wp-geo/trunk@74350 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/wp-geo.css
+++ b/wp-geo.css
@@ -13,7 +13,7 @@ div.wp_geo_map img {
 	background: transparent;
 	border: none;
 	padding: 0px;
-	max-width:none;
+	/*max-width:none;*/ /* This fixes some themes like PrimePress but breaks the Google Map scale */
 }
 
 
